--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.1"
     defaultConfig {
-        applicationId "com.juchang.jufu.jufu"
+        applicationId "com.juchang.jufu"
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
